# agent-research-thesis

./: .gitignore  Data.ipynb  README.md  Recession data.ipynb  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: auditor-agent.md  data-agent.md  hypothesis-agent.md  linear-attention-agent.md  memory-agent.md  thesis-agent.md  thesis-expert.md
config/: decompose.yaml  default.yaml  placebo.yaml  regime.yaml  train.yaml
scripts/: audit.py  build_panel.py  decompose.py  placebo_test.py  regime_analysis.py  train.py  utils.py
src/: __init__.py
src/analysis/: __init__.py  diagnostics.py  regressions.py
src/data/: __init__.py  dataset.py  features.py  loader.py
src/model/: __init__.py  attention.py  sdf.py  transformer.py
src/viz/: __init__.py  plots.py  tables.py
tests/: __init__.py  test_model.py
